added Athan Services as copyright holder, closes #206

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -613,6 +613,7 @@ Copyright \copyright 2014-15, Fraunhofer FOKUS\\
 Copyright \copyright 2014-15, MITRE\\
 Copyright \copyright 2014-15, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
 Copyright \copyright 2014-15, Thematix Partners LLC \\
+Copyright \copyright 2014-15, Athan Services \\
 
 
 
