--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2713,7 +2713,7 @@ The following people contributed directly to the development of this specificati
         \item Stephan Günther, Otto-von-Guericke University Magdeburg, Germany
         \item Maria Hedblom, Otto-von-Guericke University Magdeburg, Germany
 	\item Andreas Hoffmann, Fraunhofer FOKUS, Germany 
-        \item Yazmin Angelica Iba\~nez, University of Bremen
+        \item Yazmin Angelica Iba\~nez, University of Bremen, Germany
 	\item Maria Keet, University of Cape Town, South Africa 
 	\item Elisa Kendall, Thematix Partners LLC, USA	
         \item Alexander Knapp, University of Augsburg, Germany
