--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -615,6 +615,7 @@ Copyright \copyright 2014-15, Fraunhofer FOKUS\\
 Copyright \copyright 2014-15, MITRE\\
 Copyright \copyright 2014-15, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
 Copyright \copyright 2014-15, Thematix Partners LLC \\
+Copyright \copyright 2014-15, Athan Services \\
 
 
 
@@ -2714,7 +2715,7 @@ The following people contributed directly to the development of this specificati
         \item Stephan Günther, Otto-von-Guericke University Magdeburg, Germany
         \item Maria Hedblom, Otto-von-Guericke University Magdeburg, Germany
 	\item Andreas Hoffmann, Fraunhofer FOKUS, Germany 
-        \item Yazmin Angelica Iba\~nez, University of Bremen
+        \item Yazmin Angelica Iba\~nez, University of Bremen, Germany
 	\item Maria Keet, University of Cape Town, South Africa 
 	\item Elisa Kendall, Thematix Partners LLC, USA	
         \item Alexander Knapp, University of Augsburg, Germany
@@ -6894,7 +6895,7 @@ intersection, and the top concept:
 %\ednote{TM@OK: please be  a bit more precise here, perhaps write some grammar: C ::= ⊤ | A | C ⊓ D | ∃r.C, footnote about added sugar in OWL EL profile} Note that \EL is a very relevant ontology language; large medical ontologies like SNOMED\ednote{CL@TM: FYI, it's SNO not SNOW} CT are epxressed in \EL.\ednote{TM@OK: add RL and QL if there is space}
 %\ednote{Text entfernt: ``I.e.\ its concepts follow the following grammar'' -- versteht sich IMHO von selbst, nachdem man das obige \ALC-Beispiel gelesen hat}
 $$C ::= {\mathcal A} \,|\, \top \,|\,  C_1 \sqcap C_2 \,|\, \exists R . C$$
-Note that \ELDL does not have disjunction or negation, and is therefore a sub-Boolean logic.
+Note that \ELDL does not have disjunction or negation, and is therefore a sub-Boolean logic.\cbe
 \qed\end{definition}
 
 Remark: strictly speaking, the institution defined above is
