fixed university typo

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2720,7 +2720,7 @@ The following people contributed directly to the development of this specificati
 	\item Oliver Kutz, Free University of Bolzano, Italy
 	\item Christoph Lange, University of Bonn and Fraunhofer IAIS, Germany
 	\item Terry Longstreth, Independent Consultant, USA 	
-        \item Christian Maeder, Jacobs-University Bremen, Germany
+        \item Christian Maeder, Jacobs University Bremen, Germany
 	\item Till Mossakowski, Otto-von-Guericke University Magdeburg, Germany  	
 	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg, Germany  	  
 	\item Leo Obrst, MITRE, USA
