fixed reference to registry

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6754,7 +6754,7 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 %\end{figure}
 
 This annex specifies the \DOL Ontology, an RDF vocabulary that implements the terms and definitions from \cref{terms-and-defs}.
-Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} stipulated by clause~\ref{c:conformance}.
+Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
 The \DOL Ontology is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in \DOL, at \url{https://ontohub.org/meta/dol/ontology}.\footnote{The preferred location for the \DOL Ontology snapshots being part of this OMG standard is \url{http://www.omg.org/spec/DOL/Current/ontology}.}.
 For a full treatment of the background and design considerations of the \DOL Ontology please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
 
