--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6754,9 +6754,14 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 %\end{figure}
 
 This annex specifies the \DOL Ontology, an RDF vocabulary that implements the terms and definitions from \cref{terms-and-defs}.
-Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
 The \DOL Ontology is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in \DOL, at \url{https://ontohub.org/meta/dol/ontology}.\footnote{The preferred location for the \DOL Ontology snapshots being part of this OMG standard is \url{http://www.omg.org/spec/DOL/Current/ontology}.}.
 For a full treatment of the background and design considerations of the \DOL Ontology please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
+
+\section{Applications of the \DOL Ontology}\label{a:dol-onto-app}
+
+Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
+
+\section{Classes and Object Properties of the \DOL Ontology}\label{a:dol-onto-tables}
 
 The tables in this annex list the classes and object properties of the \DOL Ontology and thus the essential parts of its implementation.  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise.
 
